in-app USER GUIDE G1+G2 (11-chapter two-shell guideContent + GUIDE panel + /m sheet, FAQ absorbed, 12 live shots, slop-lint test) + docs/memories reorg (DECISIONS compaction r2, README/ARCH/conventions refresh, core memory index) #pr #skipreview #automerge (#46)
Co-authored-by: Claude Fable 5 <noreply@anthropic.com>