@@ -7,375 +7,142 @@ OSM buildings**; real-time EXIF what-if re-projection; ephemeris (sun/moon/stars
 save/publish pins; light RAW marketplace; premium AI shot-analysis. **Client-heavy** (WASM decode + three.js
 render + projection math all in-browser); Wix is a thin backend (auth/Data/Media/Pricing Plans/eCommerce/AI).
 Owner: Yevhen. Hackathon build. Language: TypeScript + Astro. No SSH/prod box — "prod" is Wix cloud via `wix release`.
+**UI-facing name = SIDERA (owner 2026-08-14), planning-first** — the repo and every technical identifier
+stay "frame the world".
 
-## Status
-**Phase 1 DONE + globe OVERHAUL (2026-07-10, browser-VERIFIED via Playwright at LEO/orbit/night/mid/city).**
-The globe is now the seed's signature scene: **default POV = spacecraft in LEO** (1,100 km oblique over
-Dnipro, limb + halo in top quarter, ISS-pace idle drift w/ pause-on-interaction resume-8s), base earth =
-**NASA Blue Marble July (organic geology) graded into the sage duotone** + **VIIRS night-side city lights**
-+ normal relief, atmosphere = **ray-based exp-falloff limb glow** (near-hemisphere shell — the dynamic far
-plane clips the far one), ground = **Esri World Imagery z19** palette-graded + sun-shaded + water-darkened,
-screen-door-dissolving in 2600→1400 km so detail grows organically (no hard switch) under the OSM buildings.
-Four owner fixes same day (browser-VERIFIED): buildings = dark `surface` slate + per-tile EdgesGeometry lit
-strokes (design idiom); halo altitude-adaptive (`uOrbit`: outer orbit 1/10 width + bluer); `tiles.group` sunk
-90 m (OSM buildings are Cesium-World-Terrain-clamped → floated above the ellipsoid drape; Dnipro-specific
-interim); night floors 0.32/0.45.
-Textures: `earth-color.jpg` (5400², July topo+bathy) + `earth-night.jpg` (VIIRS) — colour maps sRGB, data
-maps NoColorSpace. New tokens `atmosphereDeep`/`cityLights`. Full mechanics + traps (far-plane clip, chained
-onBeforeCompile, geodetic-vs-spherical altitude): **`mem:patterns/globe-rendering`**. `astro check` 0 ·
-35 tests green. UNVERIFIED: Esri ToS for production, mobile memory, live-dive crossfade feel, `wix release` CORS.
-**Design system imported (2026-07-10)** — chrome tokens + fonts in `tokens.css` + GL bridge
-(`mem:patterns/design-system`). **UploadFlow UI SHIPPED (2026-07-10, browser-VERIFIED)** — board-05 overlay
-(`panels/UploadFlow.tsx` + `ui/Slider.tsx` + `store/upload.ts` zustand ingest spine + `lib/decode/extract.ts`
-STUB contract + `lib/format/readout.ts`), D4 provenance badges, double-click-reset sliders, derived H-FOV;
-canvas push-back done (`Shipped - Upload Flow.dc.html`); 61 tests green; `mem:patterns/upload-flow`.
-**Phase 2 decode SHIPPED (2026-07-10, browser-VERIFIED)** — exifr metadata (2 ms, TZ-naive dates) +
-embedded-thumb instant preview + **libraw-wasm@1.0.5 EXACT-pinned** (1.1.2+ = pthreads/SAB = COOP/COEP —
-unusable on unverified Wix hosting) in a disposable per-file Worker (halfSize decode 26 MP ≈ 4.8 s →
-3136×2084 texture; worker terminated = memory freed) + libheif-js HEIC fallback. 76 tests · build green.
-Mechanics + Vite traps: `mem:patterns/upload-flow`.
-**Globe REFACTORED + Phase 3 SHIPPED (2026-07-10, browser-VERIFIED via Playwright on wix dev).**
-Refactor: every tunable → `globe/tuning.ts` (documented groups); scene split into
-`globe/scene/{baseEarth,graticule,atmosphere,stars,buildings,imageryGround}.ts` attach-modules +
-`scene/glsl.ts` (`glf` GLSL-literal injection); StylizedTiles = ~230-line orchestrator; new
-convention `.claude/conventions/globe-tuning.md`; WGS84 + SUN constants deduped. Phase 3:
-`lib/geo/frustum.ts` (pure, 20 tests) + `ecefToGeodetic`/`rayEllipsoidIntersect` in projection.ts;
-`globe/PhotoFrustum.ts` (apex-relative float32-safe geometry, vanilla zustand) + `globe/flight.ts`
-(2.2 s bezier flight, reduced-motion cut) + click-to-place (crosshair + ray-pick); store placement
-machine (review→placed | placing→placed) + `derivedFov` (ONE H-FOV derivation for UI + frustum);
-`panels/PhotoDetailPanel.tsx` docked tweak panel (light board-04; full design import deferred).
-Verified: fixture heading 214°/H-FOV 73.7° at Dnipro; re-projection 0.018 ms/update; ARW
-click-to-place with decoded texture; Escape/placing; **104 vitest · astro check 0 · wix build
-green**. Mechanics: `mem:patterns/photo-frustum`.
-**Pre-Phase-4 sky+terrain SHIPPED (2026-07-10, browser-VERIFIED via Playwright).** Ephemeris
-(astronomy-engine 2.1.19 EXACT, JPL-Horizons-tested ±0.05°) now drives EVERYTHING from scene time
-(`store/time.ts` LIVE/PINNED + `panels/TimeReadout` HUD): real sun/moon ECEF directions →
-terminator + building key light + atmosphere + moonlight (phase-scaled); sun + moon render as
-camera-anchored true-angular-size impostors (`scene/sky.ts` — impostor dist MUST clamp ≥1.2·near);
-soft bloom (EffectComposer HalfFloat+MSAA4 → UnrealBloom 0.4/0.5/0.9 → OutputPass; night floors
-0.22/0.38); sun shadows at city zoom (PCF 2048², ortho follows view focus, buildings cast+receive,
-terrain gets ShadowMaterial twins — shadow contrast, not the pipeline, is the usual "bug");
-**real 3D terrain** = Cesium World Terrain (ion asset 1, QuantizedMeshPlugin via assetTypeHandler)
-+ Esri via ImageOverlayPlugin — 90 m building sink REMOVED, `terrainHeightAt()` raycast + frustum
-`resnap()` (EXIF altitude = absolute, clamped above ground; manual = above rendered ground).
-Rule: browser screenshots → `verify-shots/` (git-ignored). 113 vitest · astro check 0.
-Mechanics + traps: `mem:patterns/sky-bodies-terrain`.
-**Owner UX pass SHIPPED (2026-07-10, browser-VERIFIED via scripted Chrome — Playwright MCP was
-wedged):** gradual zoom verticality (zoomTiltKeep 0.35 counter-rotation) + banked/eased zoomDelta
-+ altitude zoom braking + dampingFactor 0.28 inertia + POSE 38° depression (more horizon) + NEW
-declination slider (`store/camera.ts` + `panels/CameraTiltPanel.tsx`); moon/sun per-fragment
-analytic horizon-occlusion fade (was clipping through the planet) + moonBrightness 1.8; soft
-adaptive tile loading (fadeRootTiles/700 ms/300 cap + loadProgress-gated reveal + adaptive
-errorTarget 2↔12 + overlay retry). Camera mechanics: `mem:patterns/globe-rendering`; sky/loading:
-`mem:patterns/sky-bodies-terrain`.
-**Phase 4 remainder SHIPPED (2026-07-10, browser-VERIFIED via Playwright MCP):** TimeScrubber
-±12 h rail (drag pins via `setTime`, NOW resumes, EXIF `capturedAt` seeds the pin as SOLAR time at
-placement longitude — `lib/ephemeris/captureTime.ts`); golden-hour bell grade (tuning.GOLDEN, one
-sin-elevation curve: earth/ground/atmosphere GLSL twins + key light lerp to tokens.goldenHour via
-`lib/ephemeris/golden.ts`, focus ray hoisted out of the shadow gate); REAL BSC5 star field
-(`public/data/bsc5.bin` 9,096×[x,y,z,vmag,bv] via `scripts/build-star-catalog.mjs`, star sphere
-`rotation.z = −GAST`, `bodyStatesAt` returns `gastRad`). IMPLEMENTATION_PLAN §Phase 4 ☑ (planets
-not rendered). Mechanics + traps: `mem:patterns/sky-bodies-terrain` §Phase-4 remainder.
-**Pre-Phase-5 owner fix batch SHIPPED (2026-07-10, browser-VERIFIED via Playwright MCP):** narrow
-~9° terminator (EARTH.termBand twins in baseEarth+ground; lightsBand replaces nightBand); ROTATE +
-ZOOM global sliders (store/camera 3 target/mirror pairs; glides share ONE view-focus frame —
-getPivotPoint returns null on horizon views, trap); high-alt Esri patchwork fixed (fade band →
-1.6e6/650e3 + uFtwHiAlt desat harmonizer); projection arrival near-horizontal (FLIGHT 4.2/0.45) +
-photo plane 70% opacity default + PLANE ALPHA slider (store/upload.planeOpacity); low-altitude
-light-blue day sky + horizon haze in the atmosphere shader (camera-anchored dome below 350 km —
-far-plane trap) + stars gated by sun elevation at low alt + 14k-point Milky Way at real galactic
-coords as a star-sphere child (sub-pixel points render NOTHING — sizes ≥2 px). Tokens skyDay/
-skyHorizon/milkyWay added. Mechanics: `mem:patterns/sky-bodies-terrain` §Pre-Phase-5 +
-`mem:patterns/globe-rendering` §Manual sliders. **Owner batch #2 same day (browser-VERIFIED):**
-multiday scrubber (date `<input>` in the rail; `withLocalDate`/`localDateStr` in store/time;
-Dec-21 jump verified subsolar −23.44°); shadows 4096²/1600 m/radius 2/opacity 0.75 + tokens.water
-tint (mask always crisp — CONTRAST is the dark-palette ceiling); Esri patchwork root cause =
-mosaic seams baked in the low/mid-zoom SOURCE imagery → fade band 750e3/380e3 + errorFarAlt
-750e3 (Blue Marble owns >750 km; default LEO spotless). 149 vitest · astro check 0 · wix build
-green. Mechanics: `mem:patterns/sky-bodies-terrain` §Owner batch #2.
-**Phase 5 SHIPPED (2026-07-10, wix-cloud-VERIFIED in wix dev — first Wix-load-bearing phase):** managed
-member auth (@wix/astro auto-routes + hosted login; OAuth-app allowlist is PORT-EXACT — 4322 PATCHed in);
-Photos (exact GPS, ADMIN-only, ownerMemberId explicit) + PublicPins (read ANYONE, reduced-only fields)
-provisioned via REST `scripts/provision-collections.mjs` (CLI dataCollections extension does NOT provision
-from wix dev — falsified); NO data hooks on headless → 10-pin quota enforced in elevated POST /api/photos
-(unbypassable: member-session insert platform-refused WDE0027; #11 → 402 verified live); save flow = retained
-original File → TUS upload (degrades to warning) → ≤1280px preview JPEG → thin endpoints (C1); C6 structural:
-server-only publicPinRecord publishes the geohash CELL CENTER (1km/p6 DEFAULT, exact = opt-in, verified ~150 m
-offset live); globe/Pins.ts accent InstancedMesh + viewport query (≥120km global / gh4 / gh6 <3km; THROTTLE
-not debounce — %12-frame reports starve a debounce timer, real bug fixed) + click→fly (verified). 190 vitest ·
-astro check 0 · wix build green. Test member frame-p5-tester@example.com (1/10). UNVERIFIED: paid-unlimited
-(Pricing Plans app not installed → degrades to free) · production POST routes (403 trial report — /api/ping =
-released-URL canary, PRE-RELEASE GATE). Mechanics + traps: `mem:patterns/members-pins`.
-**Phase 5.5 DESIGNED + S1 SHIPPED (2026-07-11, browser-VERIFIED):** the 10-item pre-marketplace
-UX batch is mapped into sessions S1–S7 in `.claude/claude-docs/archive/PHASE_5_5_UX_BATCH.md` (canonical;
-plan twin IMPLEMENTATION_PLAN §5.5; details `mem:project/wip-2026-07-11-phase5.5-ux-batch`).
-S1 = LocationFinder (Photon autocomplete + Nominatim-on-Enter via `lib/geo/geocode.ts` adapter;
-`store/camera.ts` flyRequest seam + focus mirrors; tuning.SEARCH; extent-sized arrivals, 3 km
-terrain-safe floor) + TimeScrubber day ◀ ▶ steppers. 206 vitest · astro check 0 · wix build green.
-**Phase 5.5 S2 SHIPPED (2026-07-11, browser-VERIFIED via Playwright MCP; absorbed owner items
-13+14 — no S2b):** flight.ts rework — terrain path floor (`pathAltitude`, endpoints exact) +
-path-tangent orientation (spin killed; smooth rate profile) + **`arrivalPose()` = the ONE arrival
-derivation** (pins 200 m/80° verified 203.2 m/79.9°; search 52° now terrain-aware); street-level
-camera (zoomMinAltM 2, cameraRadius 2.5, sticky-lastGroundM street-floor guard — verified resting
-2.5 m above the Kyiv street); **FPV photographer mode** (`upload.viewMode`, camera EXACTLY at the
-frustum apex at the photo's own FOV — NDC-verified; drag-look + wheel-FOV + Escape; gates S6);
-CameraTiltPanel rework: compass (fluid north), 2D/3D toggle, encoder-style ROTATE/ZOOM rate
-controls (`ui/Encoder.tsx`, headingRateDegPerS/zoomRatePerS seams). TRAPS (load-bearing): heightAt
-returns NEGATIVE garbage on coarse tiles → clamp [0,9000] everywhere; an underground camera
-UNLOADS the whole tileset (prevention only); terrain samples must come from the VIEW FOCUS (tiles
-exist only in-frustum); GlobeControls.update() skips the near/far fit when disabled → FPV calls
-adjustCamera manually. 221 vitest · astro check 0 · wix build green. Mechanics:
-`mem:project/wip-2026-07-11-phase5.5-s2`.
-**Phase 5.5 S3 SHIPPED (2026-07-11, wix-cloud-VERIFIED in wix dev with a member cookie):** pin
-lifecycle — PATCH/DELETE /api/photos (owner-gated `items.get` check; `applyPinUpdate` keeps stored
-media on null patch fields; C6 re-reduces edited locations to the NEW cell centre — live-verified;
-isPublic toggle creates/removes the public row; DELETE frees a quota slot 2/10→1/10 live + media
-best-effort `bulkDeleteFiles`); **authorName** denormalized on PublicPins (provision gained a
-create-field diff pass; 5/5 live pins back-filled keyed on photoRef; `PublicPin.authorName` feeds
-S4 hues); custom pin name (`save.title` + input); own-pin UPDATE/⌖ RE-PLACE/DELETE panel actions
-(MY PINS passes `ownPhotoId`; armed two-step delete); placement flow completed (live ground marker
-under the pointer while placing · PLACED→TUNED→SAVED stepper · save beat → auto-close → fly-out
-3.8 km → pins-store `highlightId` → `Pins.setHighlight` 8 s pulse); upload CTA (nav accent chip +
-one-time glow, "+ ADD PHOTO" pill for zero-pin/anon); owner adds: `.ct-stack` dblclick memo above
-the camera controls + temp-pin popup **"↑ UPLOAD HERE"** (`upload.uploadAt` → `pendingPlacement`,
-applied at ingest only when the file has no GPS; FROM PIN badge in review). 243 vitest ·
-astro check 0 · wix build green. Mechanics: `mem:project/wip-2026-07-11-phase5.5-s3`.
-**Phase 5.5 S4 SHIPPED (2026-07-11, browser-VERIFIED via Playwright MCP; absorbed a same-day
-owner batch):** pin rework — `globe/Pins.ts` = THREE instanced draws (vertex-alpha stems ·
-fresnel/shimmer shader heads · additive cross-flares at twinkle peaks only) with per-author
-hues (`lib/pins/appearance.ts` hash → new pin tokens; `hueSalt "pin:"` keeps the 3 live
-authors distinct) and gh6 de-clustering (height slots + 140 m ENU ring — C6-honest);
-**instanced-ECEF PRECISION TRAP solved** (f32 large×large cancellation flickered at close
-zoom → pins render camera-anchored: mesh.position = camera, camera-relative instances,
-modelViewMatrix-ONLY shaders — reuse this for ANY future instanced ECEF layer); hover =
-throttled head raycast → eased ×1.55 enlarge + `PinHoverCard` (title/author/date/thumb);
-highlight-pulse seam kept. **Explore ambient journey** (`globe/explore.ts` + EXPLORE tuning +
-`camera.exploreActive`): NN-ordered constant-ω great-circle legs at 900 km/50° (look-ahead
-γ = asin((R+h)/R·sinα)−α, pure+tested), 6 s dwells w/ 0.12°/s pin orbit, <2-pin fallback that
-re-begins when pins land; exits on ANY interaction/Escape/steering. **Welcome landing**
-(`panels/Welcome.tsx`, owner mockup) replaced the hero: CTAs (UPLOAD/EXPLORE), chrome hidden
-via `body.welcome-active`, Explore journey auto-armed as the backdrop, any globe click
-dismisses; "+ ADD PHOTO" pill retired; time scrub centred + TimeReadout on its axis.
-267 vitest · astro check 0 · wix build green. VERIFY-TRAP: occluded Chrome throttles rAF —
-`page.bringToFront()` before timed Playwright runs. Mechanics:
-`mem:project/wip-2026-07-11-phase5.5-s4`.
-**Phase 5.5 S5 SHIPPED (2026-07-11, browser-VERIFIED via scripted headless-Chrome CDP —
-`scripts/verify-s5-night.mjs` is the reusable harness):** night-sky physics — **K&S-1991
-moonlight** (`lib/ephemeris/moonlight.ts` + `bodies.moonPhaseAngleDeg`; quarter = 10.3% of full
-live-verified; SKY.moonKeyIntensity/moonSceneGlow = full-moon anchors) · **moon shadows** via
-ONE-rig source switch (sun key impersonates the moon at tokens.moonlight × 0.3×ks when sun down
-+ moon up + illum ≥ 0.85; moonLight stands down; ground twins setShadowStrength(0.55×ks)) ·
-**Black Marble 8k** single-channel city lights (async R8 DataTexture upgrade in baseEarth,
-uNightGamma 2.2, boot VIIRS fallback; TRAPS: flipY in the DATA — UNPACK_FLIP_Y ignores typed
-arrays; no single-channel sRGB format exists) · stars/MW brighter + night floors 0.19/0.35 ·
-**navy night sky ROOT-CAUSED**: the composer cleared its LINEAR HalfFloat buffer with the
-sRGB-ENCODED clear colour (setClearColor converts to OUTPUT space when no RT is bound;
-EffectComposer runs autoClear-off) → OutputPass re-encoded it into (8,26,45) navy on every empty
-sky pixel; FIX = `scene.background` (per-target conversion) + atmosphere Chapman-obliquity factor
-(zenith rays no longer glow like limb rays at 20–350 km; ATMOSPHERE.obliquityK). Night sky now
-near-black (2,5.9,10.7). DEV add: `window.__composer`. 280 vitest · astro check 0 · wix build
-green. Mechanics + debug traps (elementsFromPoint skips pointer-events:none · hidden tiles groups
-kill the rAF tick → stale-frame measurements · stars re-show per frame): `mem:project/wip-2026-07-11-phase5.5-s5`.
-**Phase 5.5 S6 SHIPPED (2026-07-11, browser-VERIFIED via Playwright MCP):** FPV planning
-overlays — sun/moon **day-arcs** (`lib/ephemeris/dayArc.ts` pure solar-day sampling +
-`scene/dayArcs.ts` camera-anchored at the sky-impostor distance so the discs sit ON their arcs;
-alpha-blended NOT additive — additive vanishes against the day sky; past/future =
-step(uNow01, aT01), no rebuild on scrub; renderOrder is per-OBJECT, never Group) + **26
-asterisms** (baked d3-celestial, RA in DEGREES ÷15 at load, LineSegments child of the star
-sphere) + the owner FPV batch: **left-side HUD** (`panels/FpvHud.tsx` + `camera.fpvHud` mirror —
-focal-equiv via focalFromVerticalFov, bearings, off-frame ☀/☾ edge chips via
-`lib/geo/offscreen.ts`) · **ALTITUDE/FOCAL ZOOM encoders** (photo FPV unlocked: ROTATE = look,
-ALTITUDE = fpvLiftM vertical lift off the apex 0–400 m, FOCAL ZOOM = camera.fovRatePerS →
-the wheel's fovTargetDeg) · **building opacity curve** (shared-material onBeforeCompile:
-transparent ≤60 m → ghost 0.3 by 260 m; setGhostSolid altitude blend 40→180 m, depthWrite
-re-engages >0.6) · moon brighter (SKY.moonBrightness 3.2/earthshine 0.12). Same-day follow-up:
-**sky guides gated** — arcs/asterisms FPV-only, other modes get ☀/☾ direction chips, ONE
-right-panel `☀☾` toggle (`camera.skyGuides` + `skyMarkers` mirror) enables/disables all of it.
-304 vitest · astro check 0 · wix build green. Mechanics: `mem:project/wip-2026-07-11-phase5.5-s6`.
-**Phase 5.5 S7 SHIPPED (2026-07-11, browser-VERIFIED via Playwright MCP + S5 night golden gate
-PASS) — Phase 5.5 is COMPLETE (S1–S7).** Ground rework: (a) CARTO dark_nolabels drape crossfading
-in below 7→5 km (ImageOverlayPlugin overlay.opacity is a LIVE uniform — crossfade = one eased
-write, no re-composite; `uFtwDark` blends the Esri-specific colorimetry out of the grade; per-mode
-shadow contrast; satellite = opt-in `camera.groundMode` + SAT chip); (b) Natural Earth boundaries
-(one LineSegments, 9 km lift) + city labels (module-owned DOM pool, rank gate in log-altitude,
-min-sep de-clutter) at 100–900 km (DoD "gone at LEO" beat the design's 2000 km top) + CARTO
-dark_only_labels street names ≤5 km in dark mode (oblique big-text smear = accepted v1); (c)
-building grow-on-zoom 2 km→600 m via per-tile inner-Group vertical scale about a LAZY min-bbox
-ground anchor (`scene/growMatrix.ts` pure+tested; growMinK 0.004 — k=0 singular; ONE-shared-
-material invariant intact; buildings now flat above 2 km in both modes); (d) Re:Earth Overture
-trial NEGATIVE (tileset parses, every glb content tile 500s server-side) → `TILESETS.
-overtureBuildings` ships OFF. SAME-DAY OWNER REWORK: street names went VECTOR — raster was
-blurry/late/unscalable → `scene/streetNames.ts` (OpenFreeMap MVT, maxzoom 14, pbf@5 `PbfReader` +
-@mapbox/vector-tile@3, 3×3 z14 ring around the focus, one DOM label per street name ROTATED along
-its street, terrain-seated, reveal 2.5→2.1 km, type scales 9→19 px with zoom, STREETS tuning,
-step 38, FPV-hidden); grow-on-zoom REMOVED (owner: unreliable — buildings full-height again,
-growMatrix.ts deleted). New tuning groups DRAPE/LABELS (+BUILDINGS.grow*, TILESETS carto/
-overture); bake script `scripts/build-ne-labels.mjs` → public/data/ne-{boundaries.bin,places.json};
-step 37 `stepGeoLabels`. 337 vitest · astro check 0 · wix build green; shots phase55-49..56.
-Mechanics + verify traps (welcome needs a REAL click — synthetic PointerEvents don't dismiss and
-Explore eats flyRequests; golden-gate Chrome launch recipe): `mem:project/wip-2026-07-11-phase5.5-s7`.
+## Status (compacted 2026-08-15 — era index + pointers; the old narrative Status lives in DECISIONS.md digests + DECISIONS_ARCHIVE.md)
 
-**S7 owner-feedback batch SHIPPED (2026-07-11, browser-VERIFIED via Playwright MCP + S5 night
-golden gate PASS — 356 vitest · astro check 0 · wix build green):** (1) street names v3 = GL
-canvas-texture quads PINNED to the terrain in the street's tangent direction (v2 DOM @20 Hz
-lagged/jumped structurally — deleted; world-metre type, hysteresis upright-flip, eased terrain
-seat; TRAP: a stored basis vector aliased a module temp Vector3 → 1.1e9-scale matrices — entry
-vectors must be fresh); (2) NEW shared `scene/vectorTiles.ts` (parse retains geometry, one fetch
-feeds two layers) + `scene/vectorFeatures.ts` step 39 — roads as metre-width ribbons (class-tiered)
-+ waterways + water/green fills on a lazy 6×6 terrain lattice, bridges lifted+bright, night-dimmed;
-5 new vec* tokens; (3) ground grade: day/night/golden gates now read GEODETIC up (solar elevation,
-not slope) + additive ambient (uFtwAmbDay/uFtwAmbNight) + non-albedo moon fill — black-pit ground
-GONE day and night; DRAPE shadows softened 0.9→0.62; (4) low-alt haze: horizon anchor tinted
-(whiteness 0.55), horizonGain 0.16, low-alt dim ramp — horizon budget < BLOOM.threshold enforced
-by NEW `skyBudget.test.ts` guard; (5) tips system `styles/tips.css` (CSS-anchored ::after pills —
-immune to the backdrop-filter fixed-position trap) + `ui/InfoDot.tsx`: 32 tips + 5 InfoDots across
-all panels/nav. Mechanics + traps: `mem:project/wip-2026-07-11-s7-feedback-batch`.
-**Feedback batch #2 SHIPPED (2026-07-12, browser-VERIFIED; 377 vitest · astro check 0 · wix build):**
-river-tile flicker killed structurally (MVT buffer CLIPPED at parse — Sutherland–Hodgman rings +
-Liang–Barsky lines; builds PERSIST past the ring w/ distance eviction; build only after TWO lattice
-passes agree within 3 m — frustum-outside knots NaN-skip + mean-fill, the S2 in-frustum lesson) +
-camera pose in the URL (`lib/geo/urlPose.ts` `#p=lat,lon,alt,heading,tilt`; step-23 replaceState
-~1.6 s gated off welcome/Explore/FPV/flight; boot restores via arrivalPose; Welcome skips on hash —
-share links + reload lands where you were). `mem:project/wip-2026-07-11-s7-feedback-batch` §batch-2.
+### Current state (2026-08-15, post guide-G1 session)
+- **Phases 1–6.9 SHIPPED + RELEASED**: scaffold + LEO signature globe · WASM decode
+  (libraw-wasm@1.0.5 worker) · frustum projection + click-to-place · ephemeris-driven scene
+  (sun/moon/stars/terminator/shadows/golden) · members + C6 reduced-precision pins · Phase 5.5
+  S1–S7 UX (flight/FPV, pin lifecycle+visuals, Explore/Welcome, night physics, street names,
+  vector features) · Dnipro/St Albans enriched bakes on R2 · marketplace-light (Catalog V3
+  digital products, quota 100/1000, EUR). Populated globe LIVE since 2026-07-17.
+- **Astro engine A–E COMPLETE**: search/track ANY body (1,947-entry fuzzy index — stars,
+  constellations, comets, asteroids, full OpenNGC), universal-variable kepler + SIMBAD/SBDB
+  long-tail, target trail/markers/windows, planet phase discs.
+- **Planning core (Phase 8 ladder)**: 8a twilight/GC/MW shipped · QoL-1..4 (scrubber v2 +
+  trace, frameFinder cards, GHOSTS chain, NPF/moon-calendar/size-dist tools) · **FIND v2/v3**
+  (dedicated FindPanel frame-as-query per-day scan + in-frame ghost projections + standings) ·
+  **§3.5 SUNSETS-IN-FRAME** (sunEventFrame lib; refracted-labels/airless-geometry PINNED) —
+  all desktop-first with /m twins.
+- **Mobile M0–M3 COMPLETE**: `/m` planning shell (sheets/tab bar/dock conveyor), FPV touch
+  (joystick walk, pinch-FOV, wake lock, minimap), PlanSheet twins, TARGET GHOSTS + long-press
+  sky menu; mobile-default entry (`/?d=1` escape). Mobile = planning-only PERMANENTLY.
+- **Owner UX batches 2026-08-15b/c (×5 + ×9)**: PLAN/FIND one shared resizable window · grown
+  sky context menu (TRACKING/MARK/TRAIL/FIND-IN-FRAME + camera-aiming rise/set + moon %) ·
+  TRACKING camera lock (`stepSkyTrack`) · /m FIND 4th tab w/ STICKY standings (Pixel fix) ·
+  /m login + MY PLACES + SAVE VIEW + SAVED PLACES (place quota dropped) · collapsible mini-map.
+- **THE GUIDE G1 + G2-content SHIPPED 2026-08-15 both shells (this session)**: ONE content
+  module `lib/guide/guideContent.ts` (11 chapters · ~40 topics · goals router · `[[id|label]]`
+  crosslinks) → desktop `panels/Guide.tsx` + /m `GuideSheet.tsx`; **FAQ ABSORBED** (Faq island
+  deleted); 12 fresh screenshots `public/guide/*.webp` (warm-list-coupled); slop-lint +
+  crosslink/image tests. Same session: DECISIONS round-2 compaction (verbatim 07-11→08-01 →
+  DECISIONS_ARCHIVE + era digests), README/ARCHITECTURE refreshed, `mem:core` compacted.
+- **Gates: vitest 886/886 · astro check 0 err/5 hints · prod LIVE.** Both shells CDP-verified.
+- Standing rulings: Phase 7 (AI) OUT of all plans · desktop frozen additive-only ·
+  desktop-first per feature · airless geometry with TRUE almanac label times · backlog =
+  `.claude/skills/frame/references/tracked-backlog.md` (T1–T27).
+- Open tails: owner taste pass (guide chapters/copy + UX-batch knobs) · real-device
+  iPhone/Pixel pass · release canaries T2/T3 ride the next `wix release`.
+- Freshest detail always: `NEXT_SESSION_PROMPT.md` + DECISIONS §Recent sessions (top entry
+  2026-08-15d-guide-g1).
+- Live site: `frame-the-a173087b-yevhens.wix-site-host.com` (siteId
+  `f597bcf5-bd38-4941-9dfe-e16d775743a3`, appId `566ce8ce-d18c-4950-88ac-5d2c53311cd6`;
+  `mem:project/wix-site`).
 
-**App working title = SIDERA (owner 2026-08-14; UI-facing only — repo + technical ids stay "frame the world"). Next step *(after the 2026-08-15c owner UX batch ×9 — context-menu quick toggles + camera-keeping rise/set + moon % · TRACKING camera lock · /m FIND 4th tab + STICKY standings (Pixel fix) · mobile-default entry · /m SAVED PLACES + quota dropped · altcol lift · collapsible /m mini-map; `mem:project/wip-2026-08-15-uxbatch2`; fold the new surfaces into the GUIDE inventory)*: **G1 of the IN-APP USER GUIDE (owner order 2026-08-15 — dedicated multi-session track, plan = `.claude/claude-docs/GUIDE_PLAN.md`**: precise feature inventory checklist + hybrid UX shape (GUIDE panel both shells from ONE guideContent.ts data module + 3 coach-mark journeys) + G1/G2/G3 breakdown; FAQ host/absorb decision in G1; in-browser inventory audit BEFORE copy). Phase 8c / M4 / §3.5-V2 queue behind it. UX BATCH ×5 SHIPPED 2026-08-15b both shells (`mem:project/wip-2026-08-15-ux-batch`): PLAN/FIND = ONE topnav segmented toggle (`PlanFindToggle`; FIND → "FIND IN FRAME") + ONE shared draggable+RESIZABLE window (both panels mount at one spot under the "planfind" drag/resize key; NEW `usePanelResize`/`ResizeGrip` in ui/DragGrip — border-box --win-w/--win-h contract; TRAP: closed panels stay mounted → shared-key session state must be adopted on render, both hooks do) · sky-ghost first-gap root-caused (`GHOSTS.nowGapDiscs` 1.2→0.25 — the old cone ate k=±1…3 at fine steps; maxPerSide 8→15 = 30 discs, 4-site clamp sync; skyGhosts.test.ts drives the real InstancedMesh headlessly) · daytime nav scrim+halo in global.css (island buttons unreachable from scoped CSS) · /m login + MY PLACES + one-tap ◎ SAVE VIEW (`MobileAccount`/`MobilePlaces`/`SavePlaceChip`; pose hash VERIFIED riding the real dev OAuth hop; places ≠ pins-browsing, MOBILE_PLAN clarified) · scrubber pinned split amber-past/blue-future (NEW chrome token `--color-time-future #7cb0f5`, not in the GL bridge). §3.5 SUNSETS-IN-FRAME SHIPPED 2026-08-15 both shells (`lib/ephemeris/sunEventFrame.ts` event-anchored day loop, refracted-labels/airless-geometry PINNED, disc-extent pads, FindPanel SUNSETS section + PlanSheet SunsetSection — `mem:project/wip-2026-08-15-sunsets-in-frame`); M3 COMPLETE + hover-floor fix 2026-08-14 night-6 (`mem:project/wip-2026-08-14-mobile-m3c` · `mem:project/wip-2026-08-14-night6-hover-floor`) (spec WRITTEN in PLANNING_QOL_PLAN §3.5; consider a SUNSETS row inside FindPanel — don't re-bury; the FIND dd.mm label layer from night-5 is a building block — `mem:project/wip-2026-08-14-find-accuracy-labels`). DONE 2026-08-14 night-4b (owner: v2 core "works exactly as i imagined"): FIND markers RESTYLED — hairline quad-gap identity rings (ringWidthN .07 + ringAlphaGain 2.2 — hairlines need alpha compensation) + semi-transparent phase-ACCURATE body pictures (moon LROC phase-lit per hit instant via per-instance sunDir in billboard space; sun limb-darkened; bodyAlpha .6) + per-hit day-arc sky paths in hit colours (sampleDayArc cache per body|day, pathAlphaK .3 anti-scratch-bundle, hover boost ×3) · scrubber in-frame band 5px@78% (base ribbon = absolute above-horizon visibility) · SIDERA in all UI name spots (Layout/Mobile titles, logo, UploadFlow brand, ics summaries). Verify traps: React hover probes need mouseover (mouseenter no-ops) · hash-only goto = SAME-DOCUMENT nav (about:blank between loads) · wix dev port flipped 4322→4321. Shots find-rework2-01..04. DONE 2026-08-14 night-4: FIND v2 OWNER REWORK — dedicated FindPanel island (⌖ FIND pill beside PLAN, mutually exclusive open; frame-as-query: EVERY following day scanned at the EXACT scrubber wall-clock hour vs the LIVE frustum — frameFinder.frameStandings/bodyDayPositions + FIND_VIS visibility model + store/time.sameLocalTimeInstants; bodies sun/moon/GC) + in-frame ghost projections (scene/findGhosts + FINDGHOSTS tuning: hollow per-hit-coloured rings/GC-diamond from lib/theme/findPalette (10 tokens, real-body colours excluded), alpha = date ramp × visibility, click = setTime+setTarget with the camera UNMOVED, hover row↔ghost sync via store/find) + FindCard DELETED from the PLAN deck. TRAP: panel self-compute MUST gate on open&&poseKey — focus-keyed memos churn per frame during flights (an ungated 550-sample pass froze the boot flight). Gates 842/842 (+14) · astro 0 err/5 hints; browser-verified find-rework-01..03 (click-jump exact, zoom 60°→3° drops 45→0 hits live); owner-device tier open (ghost-ring size: FINDGHOSTS.ringRadFrac/minDiscDeg/alphaNear first); mem:project/wip-2026-08-14-find-rework. DONE 2026-08-14 night-3: QoL-4 owner batch — day-moon dark-chunk ROUND 3 (moon depthWrite OFF — the disc's depth wall intermittently rejected the additive dome; readPixels dark-frame detector 20/485 → 0/469; see mem:project/wip-2026-08-14-qol4-batch before touching scene/sky.ts) · reticle = lunar parallax (per-frame topocentric targetDirW from targetPosW; 0.878°→0) · GHOSTS.nowGapDiscs disc-exclusion · hover ring (SKY.hoverRing*) + skyHoverGain 0.32 · sky hover NAMES (lib/sky/hoverNames + scene/skyNames, lazy catalogs, night-gated) · QoL-3 SHIPPED desktop (FindCard az±3/el±0.5 via frameFinder.azElHits ~1 ms/day · MoonCalCard quarters/apsides/★supermoon via lib/ephemeris/moonCalendar · SpotStarsCard NPF via lib/photo/npf with frustum-auto δ · SIZE→DIST TargetPanel row via lib/geo/sizeDistance). Gates 828/828 · astro 0 err; browser-verified qol4-01..04; owner-device tier open. DONE 2026-08-14 evening: QoL-2 desktop COMPLETE + owner 7-ask batch — `lib/ephemeris/frameFinder.ts` (injected-sampler frameCrossings + nearestFrameCentre) · FrameCard/TodayCard (self-computing, per-row .ics via new `lib/export/ics.ts`) · GHOSTS temporal chain (`scene/skyGhosts.ts`, store/sky knobs) · sun/moon first-class targets (`bodyTarget`, `body:*` search rows) · right-click SkyContextMenu (`camera.skyMenu` mirror) · WASD + ⇧␣ descend · daytime-moon dark-disc shader FIX (day-sky alpha + discard + no double tonemap — see mem:project/wip-2026-08-14-qol2-batch §moon before touching scene/sky.ts) · HUD==minimap 210px · `.ct--fpv` compact deck. Gates 784/784 · astro 0 err; browser-verified qol2-01..08; owner-device tier open. DONE 2026-08-14 late: QoL-1 desktop COMPLETE — §3.1.D trace SHIPPED with a recorded deviation (planFeed mirrors skyline BINS `store/plan.profileBins`; the RAIL computes the trace via `targetElevationSeries`+`traceStates` (dayArc) + `azAltFrameMarker` (offscreen) + `FpvHud.aspect`; bins = the QoL-2 frameFinder profileFn seam) + playhead cursor (`.ts-cursor` bar+pennant replaces the knob dot, owner order); gates 763/763 · astro 0/0/5 · browser-verified qol1t-01..03; `mem:project/wip-2026-08-14-qol1-tail-trace`. DONE 2026-08-14 night: PhotoPills DEEP REVIEW (Wayback-sourced; adoption record PLANNING_QOL_PLAN §1 R1–R20) + Phase 8 ladder RE-RULED (8-QoL-1/2/3 → events → tools; DSO slid behind) + **QoL-1 SHIPPED desktop** (scrubber v2 infinite conveyor + full light bands LIGHT_DEG + sun/moon elevation curves + real hour labels + event-step taps · Space=FPV hold-ascend · My-spot→FPV both shells; vitest 752/752, browser-verified qol1-01..08; `mem:project/wip-2026-08-14-qol-batch`). M2 DONE 2026-08-14 (FPV touch: joystick walk seam `fpvWalkInput` + pinch-FOV + ⤒/⤓ nudges + HUD row + wake lock + minimap on /m; pivot invariant re-verified on touch 0.000 m; phone-viewport browser-verified; `mem:project/wip-2026-08-13-m2-fpv-touch`). M1 DONE 2026-08-13 (phone-viewport browser-verified; `mem:project/wip-2026-08-13-m1-mobile-planning`). DONE
-2026-08-13 evening: slice 7 (enriched-sample → bakes/enriched/sample, A5 de-export sweep, dist
-32.2 MB) · owner rulings (T26 ACCEPTED unbounded · T27 B2-password WON'T-FIX · T4 DEFERRED
-post-M6) · **PHASE 8a SHIPPED desktop** (twilight.ts + scrubber bands · GC target "dso:gc" +
-MW b=0/±12° band guide · mwSeason.ts + PlanPanel MW card; vitest 733/733; browser-verified,
-T25 CLOSED — point on GC, ellipse on M31; `mem:project/wip-2026-08-13-slice7-phase8a`).
-Release canaries T2/T3 still ride the next `wix release`. Phase 7 (AI) OUT of all plans. The ONE debt registry =
-`.claude/skills/frame/references/tracked-backlog.md` (now T1–T26; T23 closed).**
-FULL AUDIT #1 DONE + FIX SLICES 0–6 APPLIED 2026-08-13 (gates after fixes: vitest 710/710 (+6) ·
-astro 0/0 · hints 6 = baseline · wix build Complete 26 routes): 29 confirmed findings (report
-`.claude/claude-docs/audits/audit-full-2026-08-13.md`); D1 BLOCKER = DECISIONS same-day prepend
-SPLICE repaired pre-commit; A1 MAJOR = the one unclamped heightAt consumer (Pins) → NEW
-`sampleGroundM` clamp-no-latch in lib/geo/terrain; A6 dedup → NEW `lib/pins/fields.ts` +
-`lib/ephemeris/topo.ts` + `lib/sky/ttlCache.ts`; `@wix/redirects` phantom dep fixed;
-`conventions/contracts.md` AUTHORED (T23); C6 traced clean; astro-XSS zero sinks (T24).
-`mem:project/wip-2026-08-13-full-audit-1` + DECISIONS 2026-08-13 latest.
-PLANNING LADDER PROMOTED TO CORE + MOBILE M0 SHIPPED 2026-08-13 (vitest 704/704 (+3) · astro 0/0 ·
-wix build Complete 26 routes · browser-VERIFIED via Playwright-over-CDP; REAL-DEVICE gate OPEN):
-owner re-ruling — the MOBILE_PLAN §5 ladder (P1–P10 + backlog + ALL future planning-app features)
-is CORE scope in NEW `IMPLEMENTATION_PLAN.md §Phase 8` (8a–8e), **desktop-first then mobile**
-(lib+vitest → desktop panel → mobile sheet; a mobile surface never precedes its desktop twin);
-M0–M2 stay mobile infra, M3–M6 = the mobile SURFACES of 8a–8e (supersedes the 2026-08-11
-mobile-only scheduling); desktop freeze amended ADDITIVELY. M0 built: `/m` route
-(`pages/m.astro` + `MobileLayout.astro` viewport-fit=cover + `components/mobile/MobileShell.tsx`
-+ `styles/mobile/mobile.css` 100dvh/touch-action:none) · mobile texture tier =
-`DeviceCaps.coarsePointer` caps tier AND governor ceiling at `mid` (an iPhone otherwise detects
-HIGH — "Apple GPU" passes STRONG_GPU, mem/cores default 8) + `allow8k` opt threaded
-GlobeCanvas→StylizedTiles→{baseEarth: skip the 3×8k swaps; stars: NEW 572 KB
-`milkyway-2020-2k.jpg` via `scripts/build-milkyway-2k.mjs` — LINEAR-light Lanczos, the SVS
-flux-per-pixel trap, landmark patch means ≥0.949 PASS} · desktop deltas: topnav `Mobile` link +
-dismissible coarse-pointer banner. Coarse-shim boot verified tier=mid + ONLY the 2k haze fetched;
-fine-pointer desktop byte-identical. NEW TRAPS: author `display:flex` BEATS the `hidden` attribute
-(`[hidden]{display:none}` is load-bearing — a property-level check LIED, the screenshot caught it)
-· Playwright addInitScript on a CDP-attached page needs a NEXT navigation (about:blank hop; hash-only
-goto is same-document) · background-tab CLICKS starve on rAF actionability → `bringToFront()`.
-`mem:project/wip-2026-08-13-planning-core-restructure` + DECISIONS 2026-08-13.
-FPV WALK PIVOT-ELLIPSE BUG FIXED 2026-08-11 (backfilled 2026-08-13, audit D10 — this same-day
-session had no core block): walk state became a persistent WORLD-SPACE `fpvWalkOffset` mutated
-only by key-holds (a look never re-aims accumulated displacement) + Shift ×3 / Option ×0.5
-modifiers; browser-VERIFIED 0.000 m look-drift after walking. `mem:bugs/fpv-walk-orbit`.
-MOBILE DESIGNED + RATIFIED 2026-08-11 (`MOBILE_PLAN.md`; no code): separate `/m` page over
-responsive retrofit (desktop frozen; CDN Vary unverifiable → client-side banner, no UA redirect);
-shell = thin store/lib consumers under `components/mobile/**`; 4 additive engine seams (analog
-walk vector · pinch-FOV · long-press pin · `&sky=` hash); owner rulings: mobile = planning-only
-PERMANENTLY · Phase 7 AI panel OUT of all plans. `mem:project/wip-2026-08-11-mobile-design`.
-ASTRO ENGINE COMPLETE — PHASES B+D+E + CONSTELLATIONS SHIPPED 2026-08-10 (vitest 701/701 ·
-astro 0/0 · wix build Complete · browser-VERIFIED in a VISIBLE window): 1,947-entry fuzzy index
-(451 IAU star names · 88 constellations w/ figure highlight · 952 MPC comets · 337 asteroids ·
-full OpenNGC 13,263 via pattern branch + openngc.bin) in ONE lazy 424 KB chunk (machine-guarded
-by lazyContract.test.ts); kepler propagator now UNIVERSAL-VARIABLE (all conics, Hale-Bopp ≤2′)
-+ IAU (H,G) asteroid law (Ceres ≤30″); SIMBAD TAP + /api/sbdb long-tail (debounced, cached,
-phys-par=1 trap); planet phase discs + Saturn ring at the real 2026 edge-on opening + B−V star
-colour; PLAN/Target panels carry the tracked target's skyline verdict; last-tracked id persists.
-`mem:project/wip-2026-08-10-astro-engine-phase-bde` + DECISIONS 2026-08-10.
-ASTRO ENGINE PHASE C SHIPPED 2026-08-03 (vitest 674/674 · astro 0/0 · browser-VERIFIED in a
-VISIBLE window): day-arc TRAIL (`scene/skyTrail.ts` + `sampleTargetArc`; SHOW·MARK·TRAIL) ·
-marker click-to-aim (angular hit test, orbit+FPV) · post-search auto-aim (`store/skyAim`) ·
-tracked-target edge chip (`SkyMarkers{sun|moon|target}`, per-slot gating) · SKY_TARGET tuning
-split + prefs `skyTargetVisible/Highlight/Trail` w/ read-old-keys migration. Visible-window
-verify recipe (CDP `/json/activate`) in `mem:project/wip-2026-08-03-astro-engine-phase-c`.
-ASTRO ENGINE PHASE A SHIPPED 2026-08-03 (vitest 669/669 · astro 0/0; browser state+UI verified,
-new treatments visually UNVERIFIED — hidden-window rAF suspension trap): `SkyTarget` seam
-(`lib/ephemeris/targets.ts`, fixed/engine/kepler providers) · EARTH⇄SKY search (lazy
-`lib/sky/catalog` — planets+Pluto + ALL 110 Messier via OpenNGC bake + 10P) · `scene/skyTarget.ts`
-(comet/point/ellipse) · `TargetPanel` (per-kind cards + `targetWindows` for any target) ·
-`/api/sbdb` proxy (JPL sends no CORS). 10P = `cometTarget(TEMPEL2)`, not a special case.
-`mem:project/wip-2026-08-03-astro-engine-phase-a`.
-RELEASED 2026-07-17: populated globe LIVE (canvas · #p= mirror · FOR SALE · 28 · FAQ — real-browser
-verified). TRAP: asset edge cache is SHARDED — warm-prod-assets reads HIT while another shard still
-500s cold chunks; recovery = reload until clean.
-STOCK FIX + DEMO SEED + ORBITAL PASS + FAQ SHIPPED 2026-07-17 (gates vitest 594/594 · astro 0/0 ·
-wix build Complete; `mem:project/wip-2026-07-17-seed-orbital-faq-batch`): listings now
-createProductWithInventory + inStock:true (untracked/unlimited — V3 default tracked-qty-0 blocked
-the owner's checkout; relist verified IN_STOCK/AVAILABLE) · 27/27 demo pins seeded LIVE as
-yevhens@wix.com via DEV-only /api/dev-seed (Google member, no script login; explicit
-ownerMemberId), all listed €5–15, /api/market = 28, browser-verified both hemispheres + panel +
-row-click flight · orbital tunables (halo orbitStartAlt 400e3/span 3.6e6 engages at LEO · STARS
-dayDim* kills MW over daylit Earth in orbit · EARTH.orbitGrade day/orbit ramp via uOrbitGrade) ·
-FAQ floating panel (Faq.tsx accordion, 7 sections, 6 webp shots in public/faq/ + warm list).
-PHASE 6.9 (marketplace + access batch) SHIPPED 2026-07-17, browser-VERIFIED (`scripts/verify-phase69.mjs`;
-gates vitest 593/593 · astro 0/0 · wix build Complete): quota 100/1000 · SITE_CURRENCY EUR ("€7.50" badges) ·
-MY PINS SALES tab · PinHoverCard price chip · MARKETPLACE nav panel over public GET /api/market ·
-UPGRADE→paidPlansCheckout redirect (`lib/wix/planUpgrade.ts`) · click-time returnTo w/ #p= hash ·
-?purchased=1 toast · UNLIST arm. OWNER ACTIONS PENDING: install Pricing Plans app + one public plan
-(site lacks it — APP_NOT_INSTALLED); manual purchase→mark-paid→email loop (Phase-6 DoD). Details:
-`mem:project/wip-2026-07-17-phase69-marketplace-batch`. PHASE 6 — MARKETPLACE-LIGHT SHIPPED 2026-07-16 (LATEST; gates vitest 587/587 · astro 0/0 · wix build Complete; runtime-VERIFIED in wix dev + live gateway). Self-serve: a member lists their OWN, already-PUBLIC pin as a **Wix Stores Catalog V3 DIGITAL product** (owner asked for V1 but the site is V3 — the gateway hard-rejects V1 `428 CATALOG_V3_CALLING_CATALOG_V1_API`; V3 is BETTER — a headless app CAN create digital products on V3, V1's attach method is exposure=INTERNAL). The retained `originalFileId` IS the digital file. `POST /api/listings` (elevate → ownedPhoto → `productsV3.createProduct`, digitalFile=originalFileId → writes productId/variantId/price/currency to Photos+PublicPins) · `DELETE` unlist (deletes the product) · `GET` owner-sales (elevate `orders.searchOrders`, PAID). BUY runs CLIENT-SIDE in the buyer identity: `@wix/ecom checkout.createCheckout` + `@wix/redirects createRedirectSession` → the Wix-hosted checkout; manual payment → owner marks paid in the DASHBOARD → the preinstalled Stores automation emails the 30-day link. KEY TRAP: the checkout `catalogReference` needs `options.variantId` (productId alone → EMPTY checkout — verified) + the fixed Wix-Stores appId `215238eb-…` (NOT the TPA id 1380b703). E2E verified: member list → real product created under the member session → checkout resolved the DIGITAL line item @€7.50 → unlist tore it down (`scripts/verify-listing-member.mjs`). Remaining = the real pay→delivery-email loop (owner's manual dashboard step, not code). NEW: `lib/market/listing.ts`·`lib/wix/photosData.ts`·`pages/api/listings.ts`·`store/market.ts`·PhotoDetailPanel MarketSection·MyPins price chip; installed `@wix/ecom`+`@wix/stores`. `mem:project/wip-2026-07-16-phase6-marketplace-research`; DECISIONS "2026-07-16 (LATEST — PHASE 6…)". PRIOR: PRE-PHASE-6 UI/UX BATCH SHIPPED 2026-07-15 — 4 owner tasks, browser-VERIFIED (scripted headless-Chrome CDP; vitest 573/573 · astro 0/0 · wix build): (1) Milky Way = NASA SVS Deep Star Maps 2020 starless haze sphere on the −GAST star group (landmark-verified J2000 dir→RA/Dec mapping; dust lanes/bulge/colors; diffuse layers attenuate below 35° FOV — MILKYWAY.narrowFov*); (2) sun/moon FPV razor-cut root-caused (closest-approach vs WGS84_A sphere + tc-guard = binary cut at 0° geocentric elevation, ~0.3° above the true horizon) → ANGULAR fade vs the exact ellipsoid horizon (CPU float64 horizonTerms/horizonBandSin in scene/sky.ts, street 0.08° ↔ orbit 0.6°), atmosphere sinEl=0 seam C1-fixed (sRel + smoothstep zenith + softabs haze crest, budget guard untouched), stars+haze sink at the same line; (3) SAVED PLACES: SavedPlaces collection LIVE + /api/places + placeRecords.ts (UrlFpvPose+timeMs, one contract with #f=) + MY PINS·PLACES tabs + SAVE PLACE on the camera deck + camera.fpvJumpRequest → exact share-link-path restore incl. FPV→FPV re-jump (member E2E verified; WATCH: transient Wix Data WDE0054 on the fresh collection); (4) PIN chip (camera.pinsVisible → PinsHandle.setVisible gates render+pick in one; FPV hides by default, wasFpvActive-captured restore-on-exit). `mem:project/wip-2026-07-15-prephase6-uiux`; DECISIONS 2026-07-15 batch line. PRIOR: DOCS REORG DONE 2026-07-15 — claude-docs root now holds ONLY ARCHITECTURE.md/DECISIONS.md(+ARCHIVE)/IMPLEMENTATION_PLAN.md/NEXT_SESSION_PROMPT.md/PROJECT_SEED.md; everything else moved (git mv) into `provenance/` (DEEP_RESEARCH, CLAUDE_DESIGN_MEMO) · `dnipro-enrichment/` (DNIPRO_* + OSM2WORLD_EXPERIMENT_PREP) · `rendering/` (RENDERING_QUALITY_PASS) · `archive/` (PHASE_5_5_UX_BATCH, ARCHITECTURE_REVIEW, B19_HANDOFF); references updated repo-wide (37 files incl. these memories; DECISIONS verbatim history deliberately untouched); NEXT_SESSION_PROMPT rewritten as the Phase-6 brief (scope/DoD/pre-reads + catalog-v3-vs-v1 open Q + carried tails); ARCHITECTURE.md + IMPLEMENTATION_PLAN.md refreshed to as-built (5.5 ☑, NEW Interlude 07-12→14 ledger, Phase 6 = NEXT). Gates re-run clean astro 0/0 · vitest 548. `mem:project/wip-2026-07-15-docs-reorg-phase6-prep`; DECISIONS "2026-07-15 (LATEST — DOCS REORG + PHASE 6 RUNWAY)". PRIOR: FPV FOLLOW-UP SHIPPED 2026-07-14 — (a) BUILDINGS-slider solidity fades gradually+uniformly: the 55→56 jump was the binary `depthWrite=k>0.55/0.6` flip → replaced by the F1 screen-door Bayer dissolve (per-building hash jitter → continuous city-wide response; materials OPAQUE + depth-writing at every k; `uFlatAlpha` in buildingMaterial.ts + `uFtwTreeAlpha` on trees; setGhost/setSolidity lose all transparent/depthWrite churn); (b) FPV views shareable: `#f=lat6dp,lon6dp,eyeM,heading,pitch,fov[&t=]` (GROUND-RELATIVE eye by design; write = live camera at pose-hash cadence, `!fpvActive` gate removed; restore = bootPoseAt (the refactored ONE #p/#f boot helper) → temp-FPV entry consumes exact basis/eye/FOV via pendingFpvShare; Welcome+boot-poster skip `/^#(p|f)=/`; photo-FPV shares as temp view). Gates astro 0/0 · vitest 548 (+5) · wix build · browser-VERIFIED (uiux-05..09; round-trip exact, pitch ±0.2° settle; #p + welcome regression-clean). `mem:project/wip-2026-07-14-uiux-qol-batch` §Follow-up; DECISIONS "2026-07-14 (LATEST — FPV FOLLOW-UP)". PRIOR: UI/UX QoL BATCH SHIPPED 2026-07-14 — all 6 owner tasks browser-VERIFIED (astro 0/0 · vitest 543 (+13) · wix build; shots `verify-shots/uiux-01..04`; no globe scene/shader code touched): uniform hover-reveal drag handles OUTSIDE panels top-right (`:hover > .drag-grip`; scrolling panels moved overflow to inner .pd-scroll/.mp-scroll/.pp-scroll wrappers — overflow on a panel root clips the tab) · time PLAYBACK (±H/±M steppers + PLAY/STOP + presets ×1/1min-s/10min-s/1hr-s via SCRUB.playRates; `sceneTimeMs()` derives timeMs+(now−playWallMs)·rate → fluid scene, zero per-frame store writes; play(1) from LIVE no-op; setTime mid-play REBASES; FF = red ▶▶ labels + FAST-FORWARD chip) · precise `<input type=time>` + CUSTOM scene time shareable as `#p=…&t=<utcMs>` (formatSceneHash/parseTimeHash; LIVE never shared; boot restores) · PLAN panel top-left under the title unfolding DOWN (z 31, max-height clears the mini-map slot) · ZERO horizontal scroll (root cause: overflow-y:auto forces x to auto + tips ::after pills laid out while hidden → overflow-x:hidden everywhere + poking tips re-anchored; full-page audit clean) · ☀/☾ edge chips CLICKABLE → bring body into view (FPV: camera.skyLook eased glide FPV.skyLookEaseTauMs, cancelled by direct look; orbit: heading/tilt glides, tilt only raised, cap 88). Tails: sub-M3 playback tick · MyPins wrapper live check (member cookie) · native time-picker during FF. `mem:project/wip-2026-07-14-uiux-qol-batch`; DECISIONS "2026-07-14 (LATEST — UI/UX QoL BATCH)". NEXT = owner A/B verdict (BLD chip) + the unchanged tails below. PRIOR: LOCAL-DEV TILES SHIPPED 2026-07-14 — `wix dev` streams tiles from THIS machine, NEVER R2 (0 workers.dev requests, browser-verified): bakes moved public/enriched/* → `bakes/enriched/*` (git-ignored) + `serve`-only Vite middleware (astro.config.mjs ftwLocalTiles serves /enriched/*) + NEW `.env.development.local` dev override (mode precedence beats .env.local); build/release keep the R2 URL (build-verified: 24 MB client bundle, no tiles, R2 URL baked — 372 MB under public/ would have shipped in every build). Both tilesets re-confirmed FULLY on R2 (dnipro-real-3 386 cells · dnipro-o2w-2 389 cells · manifests + glb magic). cities/*.json output → bakes/…; bake.mjs 1 cosmetic hint line; TRAP: @ts-check astro.config needs /** @returns {import(\"vite\").Plugin} */ on inline plugins. Gates astro 0/0 · vitest 530. NEXT = owner A/B verdict (BLD chip). PRIOR: 10 km EXTENT + BLD TOGGLE SHIPPED 2026-07-14 — both bakes cover GREATER Dnipro ~20×20 km (~10 km radius, bbox [34.915,48.37,35.185,48.55], grid 20 ≈1 km cells, versions dnipro-real-3/dnipro-o2w-2, both LIVE on R2) + a CameraTiltPanel `BLD` chip toggles CLASSIC↔OSM2WORLD in one click (reload-based by design, `#p=` pose hash keeps the view; helpers isVariantActive/toggleVariantUrl in enrichedVariant.ts). Numbers: classic 127,890 bldgs·386 tiles·149.14 MB·161,823 trees (maxTrees→200k, hash-uniform thinning would have hit in-city parks) · o2w 127,097 bldgs+5,662 constructions·7.71M verts·223.76 MB after DROPPING FENCES (PoleFence+ChainLinkFence measured 62% of ALL vertices — every post rendered, sub-pixel >1 km; dropClassesRegex knob, converts mtime-cached so the fix was adapter-only). Sync contract: dnipro.json bbox == tuning.ts ENRICHED.bbox — regen BOTH on change. Gates astro 0/0 · vitest 530 (+5) · browser-VERIFIED (verify-shots/o2w-10km-01..02: periphery pose ~8.9 km out + chip round-trip). NEXT = the owner's visual A/B verdict; carried: HLOD coarse tier (matters MORE — 20×20 km honest hole above ~20 km) · o2w untagged heights · draco 23× · grid-10 orphan R2 keys (harmless). `mem:project/wip-2026-07-14-osm2world-adapter` §10km-extent. PRIOR: OSM2WORLD PRODUCTION ADAPTER SHIPPED 2026-07-14 — a PARALLEL VARIANT live on R2 + a `?enriched=` same-pose A/B seam; NEXT = the OWNER'S visual verdict (o2w vs extruder), then draco/LOD size levers if o2w wins (`/frame`+investigate-design-v3, implement/Deep; browser-VERIFIED via Playwright MCP; astro check 0/0 · vitest 525 (+12); shots `verify-shots/o2w-adapter-01..05`). The CURRENT pipeline is UNTOUCHED (bake.mjs/dnipro.json/enriched-dnipro/default runtime byte-identical). NEW: `scripts/bake/bake-osm2world.mjs` + `lib/{osmXml,readGlb}.mjs` + `cities/dnipro-o2w.json` (extends dnipro → same bbox/grid/trees/mask; upload-r2 unchanged) + `src/lib/globe/enrichedVariant.ts` (resolveEnrichedUrl: no param→env byte-identical · off→Cesium OSM · name→segment swap · "/"→verbatim; pose in #hash → same-pose A/B on reload). LOAD-BEARING FIX: the spike's constant-offset re-base drifted ~2 km full-city (`>;` relation recursion → far origin) → adapter inverts OSM2World's MetricMapProjection EXACTLY per vertex (javap-disassembled: S=40075016.686·cos(lat0); x=((lon+180)/360)·S−x0; z=(ln((1+sinφ)/(1−sinφ))/4π+0.5)·S−y0; glTF=(x,ele,−z)) → 26,104/27,920 buildings in-bbox (extruder 26,569), 91 cells, densest = centre. Bake: 95 tiles · 3.89M verts · 110.22 MB (≈3.4× extruder — levers: weld+draco 23× needs DRACOLoader wiring, or --lod 1) · +3,112 constructions (fences/walls/lamps/pylons/cliffs) · SAME 24,714 trees (A/B differs only in structures) · R2 LIVE 97 files/105 MB `enriched/dnipro-o2w/` (Worker unchanged). Honest trade: untagged buildings take OSM2World's own (sometimes lower) heights vs our classDefaultsM. Reference-safe C6 in pure Node (ways/relations removed whole; tagged nodes keep geometry, lose tags). ALSO closed: the "globe paints from R2" tail (default view streams `dnipro-real-2` from the Worker). Traps: safe.osm rewrite kills the convert mtime cache · "Rail" regex ate "Railing" · wix dev idle SSR-error → restart. `mem:project/wip-2026-07-14-osm2world-adapter`; `dnipro-enrichment/OSM2WORLD_EXPERIMENT_PREP.md §10`. PRIOR: OSM2WORLD "SLICE 1.5" 1-CELL SPIKE DONE 2026-07-14 — verdict VIABLE, GREEN-LIGHT THE FULL ADAPTER (`/frame`+investigate-design-v3, implement/Deep, browser-VERIFIED in `wix dev` via Playwright MCP; NO tracked source touched → gates unchanged astro check 0/0 · vitest 513; shots `verify-shots/o2w-slice15-01..03`). All 4 DoD answered: axis `(east,up,−north)`==our `gv(e,u,−n)` CONFIRMED to certainty (adapter re-bin north=−Z lands 1362/1362=100% buildings inside bbox, +Z lands 0; +Y up, POSITION Y∈[−1,70] m) · ground Y≈0 seats on CWT (browser @646 m & @276 m building bases flush on the street grid) · per-building identity FREE via `keepOsmElements=true`+`extras.osmId`→contiguous `_feature_id_0` per building · buildings-only re-bin 2.91 MB/21 cells, densest cell (4,5) 1.219 MB raw (vs current baker 0.855 MB, ~1.4×) → weld+draco 52 KB (23×); the raw 25.66 MB glb was 89% ROADS (RoadModule + Overpass `>;` extent-recursion → filter `Building*` nodes). CORRECTIONS: distro is `0.5.0-SNAPSHOT` (modern `convert -i -o --config --lod` CLI + mandatory `--add-exports` on Java 21), origin=data-bounds centre (re-base by `projectEN(osmOrigin,ourBasis)` offset), no `_texture0_dir`⇒0 textures (COLOR_0 dropped), `excludeWorldModule` needs Road/Railway/SurfaceArea too. Owner's "other constructions" present (Wall/PoleFence/RetainingWall/ChainLinkFence/MobilePhoneMast/StreetLamp/BollardRow/AreaFountain). Enriched tileset = visual DROP-IN (buildingMaterial.ts swap works, 9 cells streamed, no shader/tile errors). NEXT = build `scripts/bake/bake-osm2world.mjs` (mirror bake.mjs; REUSE encodeGlb/buildTileset/geo.mjs/vegetation.mjs verbatim; promote spike `readGlb.mjs`→`lib/readGlb.mjs`; prod extract = Geofabrik PBF+`osmium extract`+`tags-filter --omit-referenced` C6; decide draco-decode-wiring vs ship-uncompressed + which construction classes). Spike scaffolding git-ignored under `scripts/bake/spike-osm2world/` (`readGlb`+`03-adapter` = the seed). `mem:project/wip-2026-07-14-osm2world-slice1.5-spike`; `.claude/claude-docs/dnipro-enrichment/OSM2WORLD_EXPERIMENT_PREP.md` §9. PRIOR: OWNER R2 HOSTING LIVE + OSM2WORLD PREP 2026-07-14 (ops/docs → gates unchanged astro check 0/0 · vitest 513): the Dnipro enriched tileset now streams from **Cloudflare R2 via the `frame-the-world` Worker** (CORS/Range, PRIVATE bucket, free-tier-safe, multi-city-extensible; `scripts/bake/{upload-r2,deploy-worker,r2-worker}.mjs`; `PUBLIC_ENRICHED_TILES_URL` points at it) + a deep **OSM2World experiment prep** doc (`.claude/claude-docs/dnipro-enrichment/OSM2WORLD_EXPERIMENT_PREP.md`; verdict viable, axis `(east,up,−north)` aligns with our `(e,u,−n)` for free) → NEXT = the OSM2World "Slice 1.5" 1-cell spike + confirm the globe paints from R2 in `wix dev` (`mem:project/wip-2026-07-14-r2-hosting-osm2world-prep`). PRIOR: OWNER BATCH SHIPPED 2026-07-14 later (browser-VERIFIED; astro check 0/0 · vitest 513 (+7) · wix build): PER-BUILDING/PER-TREE terrain re-seat (the sunk/levitating fix — `_feature_id_0` vertex runs + tree instanceMatrix[13] lifted on the CPU by terrain@footprint − cell seat; edges co-mutated via exact-position CSR; nearest-cell-first budgeted sampling; TWO garbage-sample guards incl. an apply-time poisoned-pair collapse — browser-caught −134 m transient; planFeed auto-invalidate once per settled seat epoch; live deltas settle −17.0…+18.7 m over 12k features + 7.4k trees) + always-on copyable viewer coords (`camera.camGeo` mirror → FpvHud POSITION row, 6 dp Google-Earth paste shape, `formatLatLonPaste`) + ALL floating panels draggable (`ui/DragGrip.tsx`, `--drag-x/--drag-y` CSS-var transform compose, session-remembered, dbl-click reset) + FPV ALTITUDE inverted (+rate = ascend) + FPV mini-map (`MINIMAP.patchM` 200 tunable; vectorTiles now parses the `building` layer; `scene/minimapFeed.ts` step 40 reuses the shared MVT cache → `store/minimap.ts` → `panels/MiniMap.tsx` north-up canvas w/ heading wedge). NEXT: owner R2 hosting (credentials ready per owner) · dayArcs skyline fold · WS4-D subject shadow timeline · optional HLOD · Phase 6 marketplace (`mem:project/wip-2026-07-14-owner-batch-seating-ui`). PRIOR: PASS 3 MOAT + SLICE 5 SHIPPED 2026-07-14 (browser-VERIFIED; astro check 0/0 · vitest 506 (+33) · wix build): the LIGHT PLANNER — pure `lib/ephemeris/planner.ts` (rise/set w/ dip · golden windows DERIVED from tuning.GOLDEN via asin of smoothstep-band mid-sines · culminations · full/new moon · `skylineState` scan+bisect over alt(t)−profile(az(t))) + `lib/geo/horizonProfile.ts` (az-bin max-elevation, terrain march d²(1−k)/2R, per-bin honesty/coverage) + `lib/geo/occlusion.ts` (**NO-Raycaster silhouette sweeps** — building triangle edges subdivided by segment CLOSEST APPROACH; slice-3 trees as canopy spheres from the EXT_mesh_gpu_instancing TRS, sidestepping their raycast noop; OSM verts rejected in the bboxClipPrismEcef mask prism since fragment clipping doesn't stop CPU rays) + `scene/planFeed.ts` step 40 (time-sliced 3 bins+2 meshes/frame; anchor photo-apex>FPV-eye>focus; 3 km trust; store/plan mirrors) + PlanPanel (PLAN pill → BEHIND SKYLINE/CLEAR + CLEARS/HIDES + jump-to-time chips → timeStore.setTime). LIVE: sun clears the real Dnipro skyline +37 min after astronomical sunrise (02:29Z vs 01:52Z); crossing precision 0.42° @+90 s; park skyline canopy-driven (trees ARE occluders — Slice 5 DoD). BUG fixed live: zenith overflow (grazing canopy painted ALL bins >90° via the 1/cos az spread → clamp altTop≤89.9/azHalf≤180 + test). TRAPS: `cmd | head -N` SIGPIPE-kills background wix dev · `#p=` low-alt restore glide exits temp-FPV (grab first, then setTempPin+setTempFpv) · sampleProfile lerps bin CENTRES (march at (i+0.5)·binWidth). UNVERIFIED tails: photo-apex anchor in-browser · landmark-height validation · dayArcs skyline fold (seam: planFeed.profileSample()). NEXT: owner R2 hosting · dayArcs fold · WS4-D subject shadow timeline · optional HLOD · Phase 6 marketplace (`mem:project/wip-2026-07-14-pass3-obstruction-moat`). PRIOR: SLICE 3 TREES SHIPPED 2026-07-13 (browser-VERIFIED; astro check 0/0 · vitest 473 · wix build): ~24.7k deterministic trees (418 OSM points + tree_row sampling + seeded wood/park scatter, building/C6/bbox rejection, hash-seeded reproducible) baked as `EXT_mesh_gpu_instancing` nodes INSIDE the enriched cell glbs (~50 B/tree, 94 tiles · 34.05 MB total) — three 0.185 loads ONE InstancedMesh/cell (default extension, source-verified), inheriting streaming/LRU/per-cell re-seat; shared vecGreen flat-shaded night-dimmed shadow-casting material in enrichedBuildings.ts + TREES tuning group. TRAPS (source-verified): tile disposal never calls mesh.dispose() → instanceMatrix GL buffer leaks per LRU eviction (dispose-model now calls c.dispose(); LRU cycle verified clean) · InstancedMesh.raycast iterates every instance → raycast noop on tree meshes. Terrain decision RECORDED: keep CWT. Canopy rasters = README upgrade tier. NEXT: Slice 5 obstruction moat · owner R2 hosting · optional HLOD (`mem:project/wip-2026-07-13-dnipro-slice3-trees`). PRIOR: SLICE 0 BROWSER-VERIFIED + SLICE 1 REAL BAKE SHIPPED (2026-07-13; gates astro check 0 · vitest 442 · wix build; browser-VERIFIED in wix dev via Playwright): a reproducible Node DATA-DRIVEN baker `scripts/bake` (`npm run bake -- --city dnipro`) reconstructs real Dnipro buildings from OSM (footprints + inferred heights `levels×3m` + roof shapes flat/gable/pyramid + C6 military/critical-infra exclusion) → spatial-grid 3D-Tiles (per-cell glb, shared ENU frame, `_feature_id_0` per building) → masks & streams over Dnipro (3233 buildings/16 tiles/172k verts/4.83 MB, seated `group lift 101.3≈terrain 101.3` + masked + streaming, native-edge = seamless OSM extension). Owner picked the Node path over OSM2World/heavy-3dfier (Docker daemon down + public npm blocked here; both = documented upgrade tiers in `scripts/bake/README.md`). OWNER FEEDBACK 2026-07-13 (all browser-VERIFIED): bake EXPANDED to ~5.9×6.3 km / 46 tiles (both Dnipro banks) + FPV 500 mm max focal + arrow-key WALK + a BUILDINGS wireframe↔solid slider. OWNER #4 TERRAIN ELEVATION / PER-CELL RE-SEAT SHIPPED 2026-07-13 (browser-VERIFIED; astro check 0 · vitest 448 · wix build): each grid cell now offsets along its own geodetic up by (terrain@cell-centre − centre seat) — measured spread −20.6 m riverbank → +82.0 m hills over 102 m of real CWT relief, offsets match terrain within ~0.2 m; TRAP: TilesGroup.updateMatrixWorld skips children unless the GROUP matrix changed → per-cell writes call scene.updateMatrixWorld(true); baker pads region heights ±80 m (`mem:project/wip-2026-07-13-terrain-reseat`). SLICE 2 COMPLETE 2026-07-13 (browser-VERIFIED; astro check 0 · vitest 459 · wix build): (b) clip-hole — `bboxClipPrismEcef` 4-plane ECEF prism + clipIntersection/clipShadows on the shared OSM materials fixes the straddle-leak pixel-exactly (box core clean at 28 km; enriched instance carries no planes); (c) stylization reconciled — NEW `scene/buildingMaterial.ts` factory (R2 tone via `_feature_id_0`, F1 reveal, ghost, dormant R3) consumed by BOTH tilesets as SEPARATE instances (a shared one would clip the enriched set inside its own prism), enriched gains setNight, debugDistinctEdges=false; (e) FULL-CITY bake [35.00,48.42,35.10,48.50] grid 10 → 26,569 bldgs · 90 tiles · 1.17M verts · 32.8 MB, streams + LRU re-streams; (d) R2 tooling — pure-Node SigV4 `scripts/bake/upload-r2.mjs` + `lib/s3sign.mjs`, dry-run-verified; ACTUAL bucket/custom-domain/CORS = OWNER Cloudflare action (r2.dev has no CORS). TRAP: extracting module-level consts to a new module leaves the running dev server serving a stale HMR transform → runtime ReferenceError with a clean on-disk file — restart wix dev. KNOWN LIMIT: no HLOD → above ~20 km the bbox renders honestly EMPTY of buildings. NEXT — Slice 3 trees → owner R2 hosting → optional HLOD tier → Slice 5 feed the Pass-3 obstruction moat (`mem:project/wip-2026-07-13-dnipro-slice2`). PRIOR Slice-0 integration was CODE-COMPLETE (DEFAULT-OFF behind `PUBLIC_ENRICHED_TILES_URL`): masking OSM in-bbox (stop-traversal `calculateTileViewError` plugin) + a 3rd `TilesRenderer` (plain-URL + `GLTFExtensionsPlugin`) + R1 runtime clamp-to-CWT seating (CWT ellipsoidal vs GLO-30/EGM2008 orthometric, Dnipro undulation +20.42 m) — locally gated (astro check 0 · vitest 422 · wix build); NEXT = browser-verify the hand-baked sample (`node scripts/build-sample-dnipro-tiles.mjs` → `PUBLIC_ENRICHED_TILES_URL=/enriched-sample/dnipro/tileset.json` → `wix dev`) then the real OSM2World bake + R2 (`mem:project/wip-2026-07-13-dnipro-slice0-spike` + `dnipro-enrichment/DNIPRO_SLICE0_SPIKE.md`). ALSO 2026-07-13 — ILLUMINATION PASS code-complete + locally gated (astro check 0 · vitest 422 · wix build), BROWSER-UNVERIFIED: crisper shadows (DRAPE.shadowOpacity 0.62→0.80 is the key — the default dark-drape city view blends toward it) + richer sun/moon golden-hour GI (widened GOLDEN band + strengths + NEW keyBrighten/moonKeyStrength) + brighter dark-of-moon night. The cyberpunk WINDOW GRID I briefly added was REMOVED at owner request ("looks junky") — buildings carry NO night emissive; their identity = dark mass + lit edges + cast/received SHADOWS + golden/moon key. Owner's live ask = buildings casting NICE shadows on ground + each other (SHADOWS.normalBias 1.0→0.75 anchors them, radius→2). Illumination + shadows are now owner-VERIFIED ("working"): the "no shadows" bug was the frame GOVERNOR throttling the M3 Pro to tier `low` (which disables the shadow pass) — fixed by decoupling shadows from the governor (follow DEVICE tier) + flooring a strong device at `mid`; plus crisp shadows + sun/moon golden-hour GI (`mem:project/wip-2026-07-13-illumination-pass`). **NEXT INITIATIVE: the FULL Dnipro 3D enrichment implementation (Slices 1→5 of `dnipro-enrichment/DNIPRO_3D_ENRICHMENT_PLAN.md`) — the real bake (OSM2World / Overture+height-inference) → glb→3D-Tiles → self-host on R2 → mask & stream over Dnipro → trees → feed the Pass-3 obstruction moat. Slice-0 integration is code-complete + DEFAULT-OFF; handover rewritten in `NEXT_SESSION_PROMPT.md`.** Prior context: an offline BAKE of roof-shaped LOD2 buildings self-hosted on Cloudflare R2, masking Cesium OSM Buildings inside the Dnipro bbox (external research 2026-07-13 INCORPORATED → `.claude/claude-docs/dnipro-enrichment/DNIPRO_3D_ENRICHMENT_PLAN.md` + `mem:project/wip-2026-07-13-dnipro-enrichment-research`; reframes/retires R4 — bake-and-mask replaces buildings in-bbox, sidestepping the z-fight/cull blocker; extends D1/D13/C6/C1, all data $0). Recommended DEFAULTS (owner dismissed the fork Q): SLICE 0 de-risk spike FIRST (prove masking + R1 vertical-datum seating vs rendered Cesium World Terrain + R2/CORS + stylization reuse), then the full bake; hero splats deferred; the Pass 1/2 browser-verify + GTAO fold into the next browser session. FOLDED-IN prior headline: RENDERING PASS 2 (Dnipro identity) R2+R3 CODE-COMPLETE (2026-07-13) — per-building tonal
-variation (R2) + restrained night window emissive (R3), both on the ONE shared building material's chained
-onBeforeCompile (invariant intact, no new pass/tier knob — free fragment math degrading with the existing
-bloom tiering); astro check 0/0 · vitest 416 (+8 buildingNight) · wix build; runtime shader-COMPILE + look
-BROWSER-UNVERIFIED (owner: local gates only this pass — the whole rendering pass's browser loop is deferred).
-R2's metadata gate RESOLVED: the b3dm batch id survives as `geometry.attributes._batchid`/`_feature_id_0`
-(three GLTFLoader lowercases it, 3d-tiles-renderer never strips) AND the shader sums both + a per-tile seed
-so it's correct either way + degrades to per-tile tone if absent. R4 (S3DB roof reconstruction) = DESIGN-AND-
-DEFER (bespoke L-effort + Overpass bake + z-fight-vs-LOD1-prism blocker). Pass 1 (keystone + tiering +
-fluidity + GTAO-wired-off) is ALSO code-complete + browser-UNVERIFIED. → browser-verify BOTH passes in
-`wix dev` (Pass 2 FIRST: confirm the building shader LINKS over Dnipro — the #1 risk local gates can't catch),
-tune/enable GTAO, THEN Pass 3 (obstruction/astro moat) / decide R4 build. Phase 6 marketplace DEFERRED behind
-the rendering passes. See NEXT_SESSION_PROMPT.md; `mem:project/wip-2026-07-12-rendering-pass2-dnipro-identity`
-(this session) + `wip-2026-07-12-rendering-pass1-tiling-fluidity` + `wip-2026-07-12-rendering-quality-pass`.** (2026-07-12: root README
-rewritten for the internal Wix contest — canonical framing = Wix-headless stress test first, hobby
-3D layer second, AI-agent-built stated openly; 5 shots committed in `docs/media/`; live URL omitted
-until the next release — `mem:project/wip-2026-07-12-readme-rewrite`.) The pre-S7 refactor tier was COMPLETE before S7. B19 DONE 2026-07-11 (`StylizedTiles.update()` split into 36 named step-closures — provably behavior-identical; astro check 0 · 325 vitest · wix build · browser Flow-0 CLEAN · night-shadow golden gate PASS; `mem:project/wip-2026-07-11-b19-split`). Also this session: the high-altitude pin-jump-shift BUGFIX (`mem:bugs/pin-arrival-reframe`). The pre-S7 architecture-review
-SAFE tier is DONE (2026-07-11, two sessions): session 1 = B1–B5/B7/B14/B18 (DECISIONS.md compacted 709→334 +
-`DECISIONS_ARCHIVE.md`, conventions, dead code, format dedup); session 2 = the dedup follow-up B6/B8/B9/B10/
-B11/B12/B13/B15/B26 + B14 index (shared geo/math → `lib/geo/{terrain,screen,heading}.ts`; param layer →
-`lib/decode/params.ts` killing the lib→store edge; `lib/geo/coerce.ts` + `lib/pins/fields.ts CameraPoseOptics`;
-`lib/api/http.ts`; typed `src/global.d.ts` seams; `GlobeControlsInternal`; `ORCH` tuning group; throttled
-catch). Verified 323 vitest · astro check 0 · a 3-reviewer adversarial workflow → 0 findings. Remaining before
-S7: **B19** — split `StylizedTiles.update()` into named step-fns (browser-verified; scaffolding now in place).
-See `archive/ARCHITECTURE_REVIEW.md` + `NEXT_SESSION_PROMPT.md` + `mem:project/wip-2026-07-11-pre-s7-refactor-s2`.
-S7 landed 2026-07-11 (block above) — **Phase 6 marketplace is next. S1–S7 not yet released to the live URL.**
-Live site: `frame-the-a173087b-yevhens.wix-site-host.com` (siteId `f597bcf5-bd38-4941-9dfe-e16d775743a3`,
-appId `566ce8ce-d18c-4950-88ac-5d2c53311cd6`; see `mem:project/wix-site`).
+### Era index (DECISIONS.md §Per-phase digests for eras through 2026-07-21; later eras are verbatim in DECISIONS §Recent sessions)
+- **Phases 1–4 — scaffold · globe · decode · projection · ephemeris (2026-07-09→10)** —
+  digests "Bootstrap"→"Phase 4" (+ design-system import) ·
+  `mem:patterns/globe-rendering` · `mem:patterns/upload-flow` · `mem:patterns/photo-frustum` ·
+  `mem:patterns/sky-bodies-terrain` · `mem:patterns/design-system` ·
+  `mem:project/wip-2026-07-10-phase4-scrubber` · `wip-2026-07-10-prephase5-fixbatch` ·
+  `wip-2026-07-10-ui-fixes`.
+- **Phase 5 + 5.5 S1–S7 + pre-S7 refactor (2026-07-10→12)** — digests "Phase 5", "Phase 5.5
+  S1–S6", "Pre-S7 architecture review", "S7 tail + interlude" · `mem:patterns/members-pins` ·
+  `mem:project/wip-2026-07-10-phase5-members-pins` · `wip-2026-07-11-phase5.5-ux-batch` ·
+  `wip-2026-07-11-phase5.5-s2`…`s7` · `wip-2026-07-11-s7-feedback-batch` ·
+  `wip-2026-07-11-pre-s7-refactor{,-s2}` · `wip-2026-07-11-b19-split` ·
+  `wip-2026-07-12-readme-rewrite` · `mem:bugs/pin-arrival-reframe`.
+- **Rendering passes + Dnipro enrichment slices 0–3 + illumination (2026-07-12→14)** — digest
+  of the same title · `mem:project/wip-2026-07-12-rendering-quality-pass` ·
+  `wip-2026-07-12-rendering-pass1-tiling-fluidity` · `wip-2026-07-12-rendering-pass2-dnipro-identity` ·
+  `wip-2026-07-13-illumination-pass` · `wip-2026-07-13-terrain-reseat` ·
+  `wip-2026-07-13-dnipro-enrichment-research` · `wip-2026-07-13-dnipro-slice0-spike` ·
+  `wip-2026-07-13-dnipro-slice1-bake` · `wip-2026-07-13-dnipro-slice2` ·
+  `wip-2026-07-13-dnipro-slice3-trees` · `mem:bugs/gallery-thumbnail-stale`.
+- **OSM2World variant + R2 hosting + obstruction moat + owner seating/UI batches (2026-07-14)**
+  — digest of the same title · `mem:project/wip-2026-07-14-osm2world-adapter` ·
+  `wip-2026-07-14-osm2world-slice1.5-spike` · `wip-2026-07-14-r2-hosting-osm2world-prep` ·
+  `wip-2026-07-14-pass3-obstruction-moat` · `wip-2026-07-14-owner-batch-seating-ui` ·
+  `wip-2026-07-14-uiux-qol-batch`.
+- **Docs reorg → Phase 6 marketplace → 6.9 + release week + St Albans (2026-07-15→18)** —
+  digest of the same title · `mem:project/wip-2026-07-15-docs-reorg-phase6-prep` ·
+  `wip-2026-07-15-prephase6-uiux` · `wip-2026-07-16-phase6-marketplace-research` ·
+  `wip-2026-07-16-prod-asset-outage` · `wip-2026-07-17-phase69-marketplace-batch` ·
+  `wip-2026-07-17-demo-seed-curation` · `wip-2026-07-17-seed-orbital-faq-batch` ·
+  `wip-2026-07-18-st-albans-city2` · `mem:bugs/ground-checkerboard-flicker`.
+- **View-prefs persistence + default flips (2026-07-21)** — digest of the same title ·
+  `mem:project/wip-2026-07-21-viewprefs-uiux`.
+- **Astro engine A–E + comet 10P (2026-08-02→10)** — DECISIONS §Recent 2026-08-02→10 ·
+  `mem:project/wip-2026-08-02-comet-10p-tracer` · `wip-2026-08-03-astro-engine-phase-a` ·
+  `wip-2026-08-03-astro-engine-phase-c` · `wip-2026-08-10-astro-engine-phase-bde` ·
+  `mem:bugs/comet-magnitude-model`.
+- **Full audit #1 + fix slices 0–7 + Phase 8a + planning-core restructure (2026-08-13)** —
+  DECISIONS §Recent 2026-08-13 + report `.claude/claude-docs/audits/audit-full-2026-08-13.md` ·
+  `mem:project/wip-2026-08-13-full-audit-1` · `wip-2026-08-13-planning-core-restructure` ·
+  `wip-2026-08-13-slice7-phase8a` · `mem:bugs/fpv-walk-orbit`.
+- **Mobile M0–M3 (2026-08-11 design → 2026-08-14)** — DECISIONS §Recent + `MOBILE_PLAN.md` ·
+  `mem:project/wip-2026-08-11-mobile-design` · `wip-2026-08-13-m1-mobile-planning` ·
+  `wip-2026-08-13-m2-fpv-touch` · `wip-2026-08-14-mobile-m3ab` · `wip-2026-08-14-mobile-m3c`.
+- **Planning QoL 1–4 + FIND v2/v3 + §3.5 sunsets (2026-08-14→15)** — DECISIONS §Recent +
+  `PLANNING_QOL_PLAN.md` · `mem:project/wip-2026-08-14-qol-batch` ·
+  `wip-2026-08-14-qol1-tail-trace` · `wip-2026-08-14-qol2-batch` · `wip-2026-08-14-qol3-batch` ·
+  `wip-2026-08-14-qol4-batch` · `wip-2026-08-14-find-rework` ·
+  `wip-2026-08-14-find-accuracy-labels` · `wip-2026-08-14-night6-hover-floor` ·
+  `wip-2026-08-15-sunsets-in-frame` · `mem:project/owner-orders-2026-08-14-qol-batch`.
+- **Owner UX batches ×5 + ×9 (2026-08-15b/c)** — DECISIONS §Recent 2026-08-15b + 2026-08-15c ·
+  `mem:project/wip-2026-08-15-ux-batch` · `wip-2026-08-15-uxbatch2`.
+- **Guide track G1 (2026-08-15d)** — DECISIONS §Recent 2026-08-15d-guide-g1 + `GUIDE_PLAN.md` ·
+  `mem:project/wip-2026-08-15-guide-g1`.
 
-## Source layout (as-built; refreshed 2026-08-13, audit D9)
+## Next step
+The guide track continues: G1 + G2-content are shipped; remaining per `GUIDE_PLAN.md` status —
+owner taste pass (chapter set, copy voice, GUIDE chip placement, shot crops) and the optional
+coach-mark journeys (G3, owner call), plus the real-device pass. After the guide track closes,
+the owner picks the next ladder rung: **Phase 8c** (P7 meteors · P8 conjunctions · P9 lunar
+eclipses) or **M4** (AR aim · PWA · data-saver). See `NEXT_SESSION_PROMPT.md` for the live brief.
+
+## Source layout (as-built; refreshed 2026-08-15)
 Fuller map: ARCHITECTURE §7 · contract-strings/field inventory: `conventions/contracts.md`.
 - `src/components/globe/` — client:only three.js scene. `tuning.ts` (ALL tunables, documented) ·
   `scene/*` attach-modules (baseEarth/graticule/atmosphere/stars/buildings/enrichedBuildings/
   buildingMaterial/imageryGround/vectorTiles/vectorFeatures/streetNames/geoLabels/sky/skyTarget/
-  skyTrail/dayArcs/planFeed/minimapFeed + glsl) · `StylizedTiles.ts` orchestrator (41 steps,
-  2665 lines as of 2026-08-13) · `PhotoFrustum.ts` · `Pins.ts` · `flight.ts` · `GlobeCanvas.tsx`.
-  Design imports NEVER touch. Convention: `.claude/conventions/globe-tuning.md`.
+  skyTrail/skyGhosts/skyNames/findGhosts/dayArcs/planFeed/minimapFeed + glsl) ·
+  `StylizedTiles.ts` orchestrator (named step-closures) · `PhotoFrustum.ts` · `Pins.ts` ·
+  `flight.ts` · `explore.ts` · `GlobeCanvas.tsx`. Design imports NEVER touch.
+  Convention: `.claude/conventions/globe-tuning.md`.
 - `src/components/panels|ui/` — the full desktop chrome (UploadFlow, PhotoDetailPanel,
   LocationFinder, TimeScrubber, TimeReadout, CameraTiltPanel, FpvHud, TargetPanel, PlanPanel,
-  MyPins, Marketplace, Welcome, ExploreMode, Faq, MemberBadge, MiniMap, PinHoverCard + ui/*).
-  Design imports allowed. `src/components/mobile/` — M0 store-free shell for `/m` (2026-08-13).
+  FindPanel, PlanFindToggle, Guide, Frame/Today/MoonCal/SpotStars cards, SkyContextMenu,
+  MyPins, MyLocation, Marketplace, Welcome, ExploreMode, MemberBadge, MiniMap, PinHoverCard
+  + ui/*). Design imports allowed. `src/components/mobile/` — the full `/m` shell
+  (MobileShell, Sheet/TabBar, PlanSheet, FindSheet, GuideSheet, TargetSheet/TargetPeek,
+  MobileSearch, MobileAccount, MobilePlaces, MobileTimeDock, FpvControls, SceneActions).
 - `src/lib/` — ALL REAL: decode (libraw-wasm@1.0.5 worker) · geo (projection/frustum/geohash/
   terrain/precision/urlPose/occlusion/horizonProfile/…) · ephemeris (bodies/comet/targets/
-  planner/stars/asterisms/dayArc/topo/…) · sky (catalog/searchIndex/openngc/simbad/sbdb/
-  ttlCache/…) · globe (quality/enrichedVariant/enrichedMask) · pins (fields = shared row
-  mappers, appearance) · market+save+wix (record builders + SDK clients) · theme (GL token
-  bridge) · format/api/prefs.
-- `src/store/` — zustand: upload/camera/time/pins/member/save/market/plan/sky/skyAim/minimap.
-- `src/pages/` — index.astro + m.astro (+ layouts) + `api/*` thin endpoints — 26 routes total;
-  there is NO `src/backend/`.
+  planner/stars/asterisms/dayArc/frameFinder/sunEventFrame/moonCalendar/mwSeason/twilight/
+  topo/…) · sky (catalog/searchIndex/openngc/simbad/sbdb/hoverNames/ttlCache/…) · globe
+  (quality/enrichedVariant/enrichedMask) · guide (guideContent + inline crosslink grammar) ·
+  pins (fields = shared row mappers, appearance) · photo (npf) · export (ics) · market+save+wix
+  (record builders + SDK clients) · theme (GL token bridge) · format/api/prefs/textures.
+- `src/store/` — zustand: upload/camera/time/pins/member/save/market/plan/sky/skyAim/minimap/find.
+- `src/pages/` — index.astro + m.astro (+ layouts) + `api/*` thin endpoints (~8 routes: photos,
+  places, listings, market, upload-url, sbdb, dev-seed, ping); there is NO `src/backend/`.
 - `public/textures|data/` — earth + milky-way sets (8k desktop / 2k mobile) + baked catalogs
-  (bsc5.bin, openngc.bin, constellation-lines.json). `test/` — vitest twins of every lib
-  (704 tests as of 2026-08-13; audit fixes added more — see newest DECISIONS line).
+  (bsc5.bin, openngc.bin, constellation-lines.json). `public/guide/` — 12 guide screenshots
+  (warm-list-coupled). `test/` — vitest twins of every lib (886 tests as of 2026-08-15).
 
 ## Key invariants (violations = bugs)
 - Globe is `client:only` — **never SSR WebGL**. Decode runs in a **Web Worker**; free RAW buffers immediately.
@@ -401,4 +168,5 @@ are the execution source of truth (distilled from `provenance/DEEP_RESEARCH.md` 
 - `mem:patterns/sky-bodies-terrain` — ephemeris sun/moon, scene time, bloom, shadows, REAL terrain (current ground pipeline)
 - `mem:patterns/design-system` — imported Claude Design tokens/type/motion/screen boards (chrome; globe stays fenced)
 - `mem:decisions/adr-000-locked-stack` — the 15 locked ADRs · `mem:decisions/session_workflow` — persistence loop
+- `mem:decisions/session-end-autoship` — the SessionEnd auto-ship hook contract
 - `mem:memory_maintenance` — how to maintain this graph
